--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             </nav>
         </header>
         <div class="wrapper">
+            <aside>Aside</aside>
             <main>
                 Main <br />
                 Hello mens)) my nem is Robin!
