--- a/index.html
+++ b/index.html
@@ -9,25 +9,33 @@
     </head>
     <body>
         <header>
+            <h1 href="index.html" class="home">Robin<br />Bergstrand</h1>
             <nav>
-                <a href="#" class="home">Robin</a>
-                <a href="#" class="active-page">About</a>
+                <a href="index.html" class="active-page">About</a>
                 <a href="projects.html">Projects</a>
                 <a href="#">Education</a>
-                <a href="#">Contact</a>
+                <a href="contact.html">Contact</a>
             </nav>
         </header>
         <div class="wrapper">
-            <aside>Aside</aside>
-            <main>
-                Main <br />
-                Hello mens)) my nem is Robin!
+            <main class="main-about">
+                <h2>Welcome!</h2>
+                <p>I'm an aspiring Front-end web developer from Sweden.</p>
+                <p>Have a look around!</p>
             </main>
-            <aside>Aside</aside>
+            <aside class="aside-skillset">
+                <h3>Current skillset:</h3>
+                <ul>
+                    <li>Basic HTML</li>
+                    <li>
+                        Basic CSS, worked with both flexbox layouts and grid
+                        layouts.
+                    </li>
+                    <li>Basic Javascript</li>
+                    <li>Contantly learning</li>
+                </ul>
+            </aside>
         </div>
         <footer></footer>
-        <div class="button-container">
-            <button>NEXT</button>
-        </div>
     </body>
 </html>
