updated footer and added education page

--- a/education.html
+++ b/education.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
-        <title>Robin Bergstrand - Contact</title>
+        <title>Robin Bergstrand - Education</title>
     </head>
     <body>
         <header>
@@ -13,35 +13,26 @@
             <nav>
                 <a href="index.html">About</a>
                 <a href="projects.html">Projects</a>
-                <a href="education.html">Education</a>
-                <a href="contact.html" class="active-page">Contact</a>
+                <a href="education.html" class="active-page">Education</a>
+                <a href="contact.html">Contact</a>
             </nav>
         </header>
         <div class="wrapper">
-            <main class="main-contact">
-                <form action="">
-                    <label for="email">Email</label>
-                    <input
-                        type="text"
-                        name="email"
-                        id="email"
-                        placeholder="John.Doe@domain.com"
-                    />
-                    <label for="subject">Subject</label>
-                    <input
-                        type="text"
-                        name="subject"
-                        id="subject"
-                        placeholder="Regarding.."
-                    />
-                    <label for="message">Message</label>
-                    <textarea
-                        name="message"
-                        id="message"
-                        placeholder="Your message.."
-                    ></textarea>
-                    <button class="send-button">Send</button>
-                </form>
+            <aside class="aside-education">
+                <h3>Formal education:</h3>
+                <ul>
+                    <li>El och energi gymnasieexamen</li>
+                    <li>Webbutveckling 1</li>
+                    <li>Programmering 1</li>
+                </ul>
+            </aside>
+            <main class="main-education">
+                <h2>Studying</h2>
+                <p>
+                    I am currently studying Front-end development mobile and web
+                    at Chas Academy.
+                </p>
+                <p></p>
             </main>
         </div>
         <footer>
