--- a/index.html
+++ b/index.html
@@ -5,23 +5,26 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
-        <title>Document</title>
+        <title>Robin Bergstrand - About</title>
     </head>
     <body>
         <header>
-            <h1 href="index.html" class="home">Robin<br />Bergstrand</h1>
+            <h1>Robin<br />Bergstrand</h1>
             <nav>
                 <a href="index.html" class="active-page">About</a>
                 <a href="projects.html">Projects</a>
-                <a href="#">Education</a>
+                <a href="education.html">Education</a>
                 <a href="contact.html">Contact</a>
             </nav>
         </header>
         <div class="wrapper">
             <main class="main-about">
-                <h2>Welcome!</h2>
-                <p>I'm an aspiring Front-end web developer from Sweden.</p>
-                <p>Have a look around!</p>
+                <h2>Hi!</h2>
+                <p>
+                    I'm a 24 year old aspiring Front-end web developer from
+                    Sweden. With a great interest in most tech things.
+                </p>
+                <p>Thanks for visiting, Take a look around!</p>
             </main>
             <aside class="aside-skillset">
                 <h3>Current skillset:</h3>
@@ -36,6 +39,25 @@
                 </ul>
             </aside>
         </div>
-        <footer></footer>
+        <footer>
+            Copyright © 2022 Robin Bergstrand.
+            <div class="social-media">
+                <img
+                    class="facebook"
+                    src="images/icons/facebook-app-logo-svgrepo-com.svg"
+                    alt=""
+                />
+                <img
+                    class="twitter"
+                    src="images/icons/twitter-svgrepo-com.svg"
+                    alt=""
+                />
+                <img
+                    class="linkedin"
+                    src="images/icons/linkedin-svgrepo-com.svg"
+                    alt=""
+                />
+            </div>
+        </footer>
     </body>
 </html>
