--- a/projects.html
+++ b/projects.html
@@ -5,15 +5,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
-        <title>Document</title>
+        <title>Robin Bergstrand - Projects</title>
     </head>
     <body>
         <header>
-            <h1 href="index.html">Robin<br />Bergstrand</h1>
+            <h1>Robin<br />Bergstrand</h1>
             <nav>
-                <a href="index.html" class="active-page">About</a>
-                <a href="projects.html">Projects</a>
-                <a href="#">Education</a>
+                <a href="index.html">About</a>
+                <a href="projects.html" class="active-page">Projects</a>
+                <a href="education.html">Education</a>
                 <a href="contact.html">Contact</a>
             </nav>
         </header>
@@ -67,7 +67,9 @@
                             I decided to display this in a neat manner using a
                             grid layout.
                         </p>
-                        <a class="project-link" href=""
+                        <a
+                            class="project-link"
+                            href="https://chasacademy-robin-bergstrand.github.io/FizzBuzz/"
                             >Here's a link to the project</a
                         >
                         <a class="close-modal" href="#carousel">Close</a>
@@ -75,6 +77,25 @@
                 </div>
             </main>
         </div>
-        <footer></footer>
+        <footer>
+            Copyright © 2022 Robin Bergstrand.
+            <div class="social-media">
+                <img
+                    class="facebook"
+                    src="images/icons/facebook-app-logo-svgrepo-com.svg"
+                    alt=""
+                />
+                <img
+                    class="twitter"
+                    src="images/icons/twitter-svgrepo-com.svg"
+                    alt=""
+                />
+                <img
+                    class="linkedin"
+                    src="images/icons/linkedin-svgrepo-com.svg"
+                    alt=""
+                />
+            </div>
+        </footer>
     </body>
 </html>
