added image alts and form action

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         </header>
         <div class="wrapper">
             <main class="main-contact">
-                <form action="">
+                <form action="send-email">
                     <label for="email">Email</label>
                     <input
                         type="text"
@@ -50,17 +50,17 @@
                 <img
                     class="facebook"
                     src="images/icons/facebook-app-logo-svgrepo-com.svg"
-                    alt=""
+                    alt="facebook logo"
                 />
                 <img
                     class="twitter"
                     src="images/icons/twitter-svgrepo-com.svg"
-                    alt=""
+                    alt="twitter logo"
                 />
                 <img
                     class="linkedin"
                     src="images/icons/linkedin-svgrepo-com.svg"
-                    alt=""
+                    alt="linkedin logo"
                 />
             </div>
         </footer>
