--- a/projects.html
+++ b/projects.html
@@ -25,15 +25,21 @@
                 <div class="carousel" id="carousel">
                     <div id="slide1" class="one">
                         <a href="#modal-slide1"></a>
-                        <img src="images/Webbutveckling.png" alt="" />
+                        <img
+                            src="images/Webbutveckling.png"
+                            alt="Image of project 1"
+                        />
                     </div>
                     <div id="slide2" class="two">
                         <a href="#modal-slide2"></a>
-                        <img src="images/Wordle.png" alt="" />
+                        <img src="images/Wordle.png" alt="Image of project 2" />
                     </div>
                     <div id="slide3" class="three">
                         <a href="#modal-slide3"></a>
-                        <img src="images/FizzBuzz.png" alt="" />
+                        <img
+                            src="images/FizzBuzz.png"
+                            alt="Image of project 3"
+                        />
                     </div>
                 </div>
                 <div id="modal-slide1" class="modal">
@@ -83,17 +89,17 @@
                 <img
                     class="facebook"
                     src="images/icons/facebook-app-logo-svgrepo-com.svg"
-                    alt=""
+                    alt="facebook logo"
                 />
                 <img
                     class="twitter"
                     src="images/icons/twitter-svgrepo-com.svg"
-                    alt=""
+                    alt="twitter logo"
                 />
                 <img
                     class="linkedin"
                     src="images/icons/linkedin-svgrepo-com.svg"
-                    alt=""
+                    alt="linkedin logo"
                 />
             </div>
         </footer>
