--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
                 <img
                     class="facebook"
                     src="images/icons/facebook-app-logo-svgrepo-com.svg"
-                    alt=""
+                    alt="facebook logo"
                 />
                 <img
                     class="twitter"
                     src="images/icons/twitter-svgrepo-com.svg"
-                    alt=""
+                    alt="twitter logo"
                 />
                 <img
                     class="linkedin"
                     src="images/icons/linkedin-svgrepo-com.svg"
-                    alt=""
+                    alt="linkedin logo"
                 />
             </div>
         </footer>
