Edited project descriptions and added links

--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,8 @@
                         <p>
                             This was an assignment originally made using
                             wordpress generating the pages following a custom
-                            template.
+                            template. Because of this, I don't have this
+                            uploaded on github for you check out.
                         </p>
                         <a class="close-modal" href="#carousel">Close</a>
                     </div>
@@ -56,7 +57,16 @@
                 <div id="modal-slide2" class="modal">
                     <div class="modal-container">
                         <h3>A copy of Wordle</h3>
-                        <p>A simple functional copy of wordle using Grid</p>
+                        <p>
+                            A simple mostly fully functional copy of wordle from
+                            before i had a full understanding of CSS Grid, with
+                            a very limited amount of words added
+                        </p>
+                        <a
+                            class="project-link"
+                            href="https://chasacademy-robin-bergstrand.github.io/Wordle/"
+                            >Here's a link to the project</a
+                        >
                         <a class="close-modal" href="#carousel">Close</a>
                     </div>
                 </div>
