cleaned up css and some class names

--- a/projects.html
+++ b/projects.html
@@ -23,18 +23,18 @@
                     Click each project for more information
                 </h2>
                 <div class="carousel" id="carousel">
-                    <div id="slide1" class="one">
+                    <div id="slide1" class="project one">
                         <a href="#modal-slide1"></a>
                         <img
                             src="images/Webbutveckling.png"
                             alt="Image of project 1"
                         />
                     </div>
-                    <div id="slide2" class="two">
+                    <div id="slide2" class="project two">
                         <a href="#modal-slide2"></a>
                         <img src="images/Wordle.png" alt="Image of project 2" />
                     </div>
-                    <div id="slide3" class="three">
+                    <div id="slide3" class="project three">
                         <a href="#modal-slide3"></a>
                         <img
                             src="images/FizzBuzz.png"
